k8s/iotdatacontroller-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: iotdatacontroller-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: iotdatacontroller
  template:
    metadata:
      labels:
        component: iotdatacontroller
    spec:
      containers:
        - name: iotdatacontroller
          image: davidetestoni/iotdatacontroller:latest
