k8s/iotdataprovider-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: iotdataprovider-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: iotdataprovider
  template:
    metadata:
      labels:
        component: iotdataprovider
    spec:
      containers:
        - name: iotdataprovider
          image: davidetestoni/iotdataprovider:latest
          ports:
            - containerPort: 3000
            - containerPort: 6390
