k8s/iotdataprovider-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: iotdataprovider-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: iotdataprovider
  ports:
    - name: api
      port: 3000 # port of the ClusterIP service
      targetPort: 3000 # port inside the container
      protocol: TCP
    - name: realtime
      port: 3690
      targetPort: 3690
      protocol: UDP
