k8s/mysql-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-ip
spec:
  type: ClusterIP
  selector:
    component: mysql
  ports:
    - port: 3306 # port of the ClusterIP service
      targetPort: 3306 # port inside the container
