k8s/rabbitmq-node-port.yaml
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-node-port
spec:
  type: NodePort
  selector:
    component: rabbitmq
  ports:
    - name: amqp
      port: 5672
      targetPort: 5672
      nodePort: 30002
      protocol: TCP
