k8s/redis-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-cluster-ip-service
spec:
  type: ClusterIP
  selector: # what pods we expose
    component: redis
  ports:
    - port: 6379 # port that the other object uses to reach the pod's port
      targetPort: 6379 # port inside the pod
